--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
-h1{
+h1, h2{
     text-align: center;
+}
+
+h2#jogada{
+    margin:50px 0;
+    color: red;
+    font-size: 22px;
 }
 
 div{
@@ -16,6 +22,12 @@ div#main{
     margin: 80px auto 0;
 }
 
+div.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 div.towers{
     height: 160px;
     width: 20px;
@@ -23,6 +35,7 @@ div.towers{
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    cursor: pointer;
 }
 
 div.disc{
@@ -59,6 +72,10 @@ div#small{
         margin: 200px auto 0;
     }
 
+    h2{
+        font-size: 24px;
+    }
+
     div.towers{
         height: 300px;
         width: 25px;
@@ -86,3 +103,6 @@ div#small{
 
 }
 
+div.hidden{
+    visibility: hidden;
+}
