--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ h2#jogada{
   font-size: 22px;
 }
 
+h3#movescount{
+  text-align: center;
+  font-size: 20px;
+}
+
 div{
   box-sizing: border-box;
 }
